--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "api.openships",
   "version": "1.0.0",
-  "main": "src/index.js",
+  "main": "index.js",
   "scripts": {
-    "start": "node ./src/index.js",
-    "dev": "node ./src/index.js"
+    "start": "node ./index.js",
+    "dev": "node ./index.js"
   },
   "keywords": [],
   "author": "OpenShips",
