--- a/package.json
+++ b/package.json
@@ -4,13 +4,15 @@
   "main": "index.js",
   "scripts": {
     "start": "node ./index.js",
-    "dev": "node ./index.js"
+    "dev": "node ./index.js",
+    "startAisStream": "node ./src/aisstream.js"
   },
   "keywords": [],
   "author": "OpenShips",
   "license": "MIT",
   "description": "API for the OpenShips application",
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
     "mysql2": "^3.15.1",
